[project]
name = "tljh-db"
version = {use_scm = true}
description = "The littlest jupyterhub plugin for working with mysql databases"
readme = "README.md"
authors = [
    {name = "Christoph Blessing", email = "33834216+cblessing24@users.noreply.github.com"},
]
dependencies = [
    "pymysql~=1.0",
    "xkcdpass~=1.17",
]
dev-dependencies = [
    "black~=20.8b1",
    "isort~=5.7",
]
requires-python = ">=3.8"
dynamic = ["classifiers", "version"]
license = {text = "3-Clause BSD"}

[project.urls]
homepage = "https://github.com/sinzlab/tljh-db"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pdm]
