[metadata]
name = tljh-db
version = 0.1
url = https://github.com/sinzlab/tljh-db
author = Christoph Blessing
author_email = chris.blessing@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license = GNU GPLv3
license_file = LICENSE
description = The littlest jupyterhub plugin for working with mysql databases
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = tljh_db
python_requires = >=3.8
install_requires=
    pymysql
    xkcdpass

[options.entry_points]
tljh =
    db = tljh_db
